I have cleaned up the code base a bit, a lot less warning, removed all .* import statements, made sure all methods have java doc, preped for final UML to be built tomorrow night/friday.